--- a/index.html
+++ b/index.html
@@ -136,6 +136,7 @@
     </footer>
 
     <script src="data.js"></script>
+    <script src="color-variables.js"></script>
     <script src="script.js"></script>
 </body>
 
